--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </header>
 
     <nav>
-        <a href="file:///C:/Users/jonat/OneDrive/%C3%81rea%20de%20Trabalho/Trabalho%20escola/001.html">Home</a>
+        <a href="https://jonatasfiorentin.github.io/SITE/">Home</a>
     </nav>
 
     <section>
